This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
9/26/22: Fixed taking FEI STEM images when there is advanced scripting
(In 4.0).

9/22/22: No longer allow using just a number instead of using DoScript
(In 4.0).

9/22/22: SEM_4-0-12
9/22/22: Fixed new test for whether flashing is supported.

9/21/22: SEM_4-0-11
9/21/22: Added message box for RotationAndPixel pixel sizes of 999 (In 4.0).

9/20/22: Fixed a problem with initial rotation angles if the EFTEM camera
is calibrated first, and made it test for FEG flashing capability for an FEI
scope instead of assuming it exists.

9/19/22: Clarified dose/frame text for Falcon 4 and fixed showing CLA for IS
in STEM mode on JEOL (In 4.0).

9/6/22: Fixed two crashes if hole finder finds only one or two points in
montage (In 4.0).

8/25/22: Fixed Camera - Divide 16 Bit by 2 being disabled for FEI cameras
(In 4.0).

8/22/22: Fixed script run by external Python from getting hung up (In 4.0).

8/22/22: Prevented ChangeIntensityBy from applying negative factor (In 4.0).

8/20/22: Prevented CreateProcess command from being named CreateProcessA
(in 4.0).

8/19/22: SEM_4-0-10
8/19/22: Fix DM crash with GMS 3.5 after taking ~1 million frames (In 4.0).

8/19/22: Fix problem if property "GIF 0" occurs after "FEIFilterType 1"
(In 4.0).

8/19/22: Fix InitialCurrentCamera being assigned with AssumeCameraForDummy
value when the latter wasn't set (In 4.0).

8/19/22: Prevented some bad array accesses in Navigator after loaded a file
smaller than the previous one (In 4.0).

8/19/22: Fixed some duplication of acquired positions in hole combiner
(In 4.0).

7/22/22: Fixed using the wrong information about what piece a point is drawn
on when drawing on an image that is not the original map drawn on (In 4.0).
