@@ -1385,7 +1385,7 @@ void CCameraSetupDlg::ManageCamera()
   int canConfig, state;
   BOOL states[NUM_CAMSETUP_PANELS] = {0, true, 0, 0, 0, 0, 0, 0, 0, true};
   bool twoRowPos;
-  bool alpine = mParam->K2Type == K3_TYPE && mParam->sizeX < ALPINE_SIZE_TEST;
+  bool alpine = IS_ALPINE(mParam);
   int hideForFalcon[] = {IDC_STAT_FRAME_TIME, IDC_EDIT_FRAME_TIME, IDC_STAT_FRAME_SEC,
     IDC_STAT_K2MODE, IDC_BUT_SETUP_ALIGN, IDC_RLINEAR, IDC_RCOUNTING, IDC_RSUPERRES, 
     IDC_ALIGN_DOSE_FRAC, IDC_STAT_ANTIALIAS, IDC_STAT_SAVE_SUMMARY, 
