@@ -925,7 +925,7 @@
         <TR VALIGN="top">
           <TD>MinimumK3FrameTime</TD>
           <TD>Minimum duration for a frame in Dose Fractionation mode on the K3 camera.&nbsp; The
-            default is 0.01332 sec.</TD>
+            default is 0.01332 sec for K3.&nbsp; A different value is used for an Alpine camera.</TD>
         </TR>
         <TR VALIGN="top">
           <TD>K2ReadoutInterval</TD>
@@ -1345,7 +1345,7 @@
         <TR VALIGN="top">
           <TD>K2Type</TD>
           <TD>Set to 1 for a Gatan K2 Summit camera, 2 for a Base camera or for a Summit
-            booted into Base mode, or 3 for a K3 camera.</TD>
+            booted into Base mode, or 3 for a K3 or Alpine camera (the Alpine is recognized by its different size).</TD>
         </TR>
         <TR VALIGN="top">
           <TD>OneViewType</TD>
